--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,14 +61,14 @@
             android:id="@+id/databaseText"/>
     </LinearLayout>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Recibir Datos"
-        android:enabled="false"
-        android:id="@+id/getDataButton"
-        android:padding="@dimen/connect_padding"
-        android:layout_marginTop="@dimen/buttons_padding_top"/>
+    <!--<Button-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Recibir Datos"-->
+        <!--android:enabled="false"-->
+        <!--android:id="@+id/getDataButton"-->
+        <!--android:padding="@dimen/connect_padding"-->
+        <!--android:layout_marginTop="@dimen/buttons_padding_top"/>-->
 
     <Button
         android:layout_width="match_parent"
@@ -109,25 +109,25 @@
             android:id="@+id/pm25Text"/>
     </LinearLayout>
 
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="horizontal">-->
-        <!--<TextView-->
-            <!--android:layout_width="@dimen/data_label_size"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="PM 10"-->
-            <!--android:padding="@dimen/data_padding"-->
-            <!--android:textSize="@dimen/data_size"/>-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="@dimen/data_label_size"
+            android:layout_height="wrap_content"
+            android:text="PM 10"
+            android:padding="@dimen/data_padding"
+            android:textSize="@dimen/data_size"/>
 
-        <!--<EditText-->
-            <!--android:id="@+id/pm10Text"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight="1"-->
-            <!--android:padding="@dimen/data_padding"-->
-            <!--android:textSize="@dimen/data_size" />-->
-    <!--</LinearLayout>-->
+        <EditText
+            android:id="@+id/pm10Text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="@dimen/data_padding"
+            android:textSize="@dimen/data_size" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -223,20 +223,20 @@
         android:weightSum="3"
         android:orientation="horizontal"
         android:paddingTop="@dimen/buttons_padding_top">
-        <Button android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Enviar Datos"
-            android:textSize="@dimen/data_button_size"
-            android:padding="@dimen/data_button_padding"
-            android:id="@+id/sendButton"/>
-        <Button android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Borrar Datos"
-            android:textSize="@dimen/data_button_size"
-            android:padding="@dimen/data_button_padding"
-            android:id="@+id/eraseButton"/>
+        <!--<Button android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="Enviar Datos"-->
+            <!--android:textSize="@dimen/data_button_size"-->
+            <!--android:padding="@dimen/data_button_padding"-->
+            <!--android:id="@+id/sendButton"/>-->
+        <!--<Button android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="Borrar Datos"-->
+            <!--android:textSize="@dimen/data_button_size"-->
+            <!--android:padding="@dimen/data_button_padding"-->
+            <!--android:id="@+id/eraseButton"/>-->
         <Button android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
